--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,3 +16,5 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push 009050306480.dkr.ecr.us-east-1.amazonaws.com/hello-world-ecs:latest
+artifacts:
+    files: imagedefinitions.json
